<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:ignore="MissingDefaultResource">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            style="@style/BigBoldText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/add_rating" />

        <EditText
            android:id="@+id/addResourceName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/text_resource_name"
            android:hint="@string/text_resource_name"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1" />

        <EditText
            android:id="@+id/addResourceValue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="@string/text_resource_value"
            android:hint="@string/text_resource_value"
            android:inputType="text"
            android:lines="1"
            android:maxLines="1" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/addNewRatingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/text_add_rating"
                tools:ignore="ButtonStyle" />

            <Button
                android:id="@+id/skipNewRatingButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:text="@string/text_skip"
                tools:ignore="ButtonStyle" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>