<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp">

    <TextView
        android:id="@+id/notSearchedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_not_searched"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/movieNameInputText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autofillHints="@string/text_type_name"
        android:hint="@string/text_type_name"
        android:inputType="text"
        android:lines="1"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/searchButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/text_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieNameInputText" />

    <ImageView
        android:id="@+id/posterImage"
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:contentDescription="@string/text_poster_image"
        android:padding="8dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchButton"
        tools:src="@tools:sample/avatars" />

    <TextView
        android:id="@+id/movieNameText"
        style="@style/BigBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/posterImage"
        tools:text="@tools:sample/full_names" />

    <TextView
        android:id="@+id/movieYearText"
        style="@style/BigBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieNameText"
        tools:text="2011" />

    <TextView
        android:id="@+id/movieGenreText"
        style="@style/NormalItalicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieYearText"
        tools:text="@tools:sample/last_names" />

    <TextView
        android:id="@+id/movieRatingsText"
        style="@style/NormalBoldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_ratings"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieGenreText"
        tools:text="Ratings:"
        tools:visibility="visible" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/ratingsList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:clipToPadding="false"
        android:paddingBottom="60dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/movieRatingsText"
        tools:itemCount="3"
        tools:listitem="@layout/item_score" />

    <Button
        android:id="@+id/addRatingButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:backgroundTint="@color/colorAccent"
        android:contentDescription="@string/text_add_rating"
        android:text="@string/text_add_rating"
        android:textAlignment="center"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:maxImageSize="40dp"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>